Renamed admin_index route name. Added app_root helper method for manual pathing references (favicon, javascript).

--- a/README.rdoc
+++ b/README.rdoc
@@ -32,13 +32,13 @@ Basic installation creates a fresh database with a single admin user.  See +db+/
 
 You can choose to test drive TicketMule with fake data as described below.
 
-Create database configuration file and modify as needed:
+Create a database.yml file and modify as needed:
 
-  $ cp config/database.example.yml config/database.yml
+  $ cp config/database.mysql.yml config/database.yml
 
 Configure TicketMule settings in the <em>production</em> block of +config+/+config+.+yml+.  See comments for details.
 
-Modify +config+/+environment+.+rb+ settings such as default timezone and rails gem version.
+Modify +config+/+environment+.+rb+ settings such as default timezone, rails gem version, relative url root (if applicable), etc.
 
 Modify +db+/+seeds+.+rb+ to create the seed data for your installation of TicketMule.  This is where you create your organization's groups, statuses, and priorities.
 
