Added ability for admins to unlock users. Modified login method so that only enabled users can login.

--- a/README.rdoc
+++ b/README.rdoc
@@ -67,4 +67,4 @@ TicketMule is released under the MIT License.  See the LICENSE file for details.
 
 == Credits
 
-Fugue icons copyright (c) 2009 by Yusuke Kamiyamane. {Pinvoke.com}[http://www.pinvoke.com]
+Fugue icons copyright (c) 2010 by {Yusuke Kamiyamane}[http://p.yusukekamiyamane.com/]
