--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,3 +5,5 @@ en:
   invalid_credentials: 'Invalid credentials! Please try again.'
   sign_in: 'Sign In'
   not_authenticated: 'Please sign in before continuing!'
+  successful_sign_out: 'You have successfully signed out!'
+  confirm_sign_out: 'Are you sure you wish to sign out?'
