--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,9 @@ en:
   password: 'Password'
   invalid_credentials: 'Invalid credentials! Please try again.'
   sign_in: 'Sign In'
+  signed_in_as: 'Signed in as'
+  sign_out: 'Sign Out'
   not_authenticated: 'Please sign in before continuing!'
   successful_sign_out: 'You have successfully signed out!'
+  successful_sign_in: 'You have successfully signed in!'
   confirm_sign_out: 'Are you sure you wish to sign out?'
