WIP User creates a ticket

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,3 +11,14 @@ en:
   successful_sign_out: 'You have successfully signed out!'
   successful_sign_in: 'You have successfully signed in!'
   confirm_sign_out: 'Are you sure you wish to sign out?'
+  save: 'Save'
+  dashboard: 'Dashboard'
+  title: 'Title'
+  priority: 'Priority'
+  status: 'Status'
+  group: 'Group'
+  contact: 'Contact'
+  owner: 'Owner'
+  details: 'Details'
+  add_ticket: 'Add Ticket'
+  ticket_error: 'There was an error in creating this ticket. Please make corrections and try again.'
